# mdslides

./: CHANGELOG.md  COPYRIGHT  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  dist-workspace.toml
.github/workflows/: check.yml  licenses.yml
src/: lib.rs  main.rs
src/plugins/: mod.rs  slides.rs  syntax.rs
tests/: reference.rs
tests/data_in/: book.toml  index_template.html  mdslides.toml  template.html
tests/data_in/src/: chapter_1.md  chapter_2.md
tests/reference_out/: chapter_1.html  chapter_2.html  index.html
