[package]
name = "mdslides"
version = "0.2.0"
edition = "2021"
description = "A tool to convert markdown into reveal.js slides"
authors = ["Jonathan Pallant <jonathan.pallant@ferrous-systems.com>"]
license = "Apache-2.0 OR MIT"
keywords = ["markdown", "slides"]
categories = ["command-line-utilities", "template-engine"]
repository = "https://github.com/ferrous-systems/mdslides/"
exclude = [".github"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
toml = "0.7"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
pulldown-cmark = "0.9.2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
