[package]
authors = ["Jonathan Pallant <jonathan.pallant@ferrous-systems.com>"]
categories = ["command-line-utilities", "template-engine"]
description = "A tool to convert markdown into reveal.js slides"
edition = "2021"
exclude = [".github"]
keywords = ["markdown", "slides"]
license = "Apache-2.0 OR MIT"
name = "mdslides"
readme = "README.md"
repository = "https://github.com/ferrous-systems/mdslides/"
version = "0.3.0"

[dependencies]
clap = {version = "4", features = ["derive"]}
env_logger = "0.10"
log = "0.4"
pulldown-cmark = "0.9.2"
serde = {version = "1", features = ["derive"]}
thiserror = "1"
toml = "0.7"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
