[package]
authors = ["Jonathan Pallant <jonathan.pallant@ferrous-systems.com>"]
categories = ["command-line-utilities", "template-engine"]
description = "A tool to convert markdown into reveal.js slides"
edition = "2021"
exclude = [".github"]
keywords = ["markdown", "slides"]
license = "Apache-2.0 OR MIT"
name = "mdslides"
readme = "README.md"
repository = "https://github.com/ferrous-systems/mdslides/"
version = "0.6.1"

[dependencies]
clap = {version = "4", features = ["derive"]}
env_logger = "0.10"
log = "0.4"
graphviz-rust = "0.9.3"
pulldown-cmark = "0.9.2"
serde = {version = "1", features = ["derive"]}
thiserror = "1"
toml = "0.7"

[dev-dependencies]
folder_compare = "0.4.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
